# gensim-word2vec-movie

./: .gitignore  README.md  pyproject.toml
notebooks/: movie.ipynb
