[tool.poetry]
name = "gensim-word2vec-movie"
version = "0.1.0"
description = ""
authors = ["Takashi Yamamiya <tak@metatoys.org>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
gensim = "^4.0.1"
pandas = "^1.2.4"
numpy = "^1.20.3"
sklearn = "^0.0"
matplotlib = "^3.4.2"
nltk = "^3.6.2"
pyemd = "^0.5.1"
smart-open = {extras = ["http"], version = "^5.1.0"}
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
